2008-01-16  Neal H. Walfield  <neal@gnu.org>

	* storage.c (shadow_setup): Update rm_folio_object_alloc use to
	reflect API changes.
	(storage_alloc_): Likewise.
	(storage_free_): Likewise.

2008-01-14  Neal H. Walfield  <neal@gnu.org>

	* sbrk.c: New file.
	* Makefile.am (libhurd_mm_a_SOURCES): Add sbrk.c.

2008-01-12  Neal H. Walfield  <neal@gnu.org>

	* ia32-exception-entry.S (_exception_handler_end): Remove
	gratuitous lock prefix.

2008-01-02  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_handler_activated): Move the debug
	statement after the call to utcb_state_save.

	* Makefile.am (COMMON_CPPFLAGS): Add -mpreferred-stack-boundary=2.
	Use -O2.

2008-01-02  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (crc) [! NDEBUG]: New function.
	(exception_handler_activated) [! NDEBUG]: After saving the frame
	state, calculate the crc of the header.  Check it before
	returning.

	(exception_frame_slab_alloc): Save the UTCB state before calling
	storage_alloc and restore it before returning.

	(exception_handler_activated): Assert that
	EXCEPTION_PAGE->ACTIVATED_MODE is set.

	(exception_handler_normal): If we fail to handle the fault, panic.
	(exception_handler_activated): Likewise.

	* ia32-exception-entry.S (_exception_handler_entry): Correctly
	test and set the flags.

2007-12-25  Neal H. Walfield  <neal@gnu.org>

	* as.h: Change VISIT's signature: pass a struct cap_properties
	instead of a struct cap_addr_trans.  Update callers.
	* as.c (as_walk): Change VISIT's signature: pass a struct
	cap_properties instead of a struct cap_addr_trans.  Call VISIT
	appropriately.
	(as_alloc_slow): Update rm_cap_read use to reflect API changes.
	(as_init): Update rm_cap_read use to reflect API changes.  Use
	CAP_PROPERTIES_SET to set shadow capability properties.
	* storage.c (shadow_setup): Update rm_folio_object_alloc use to
	reflect API changes.  Also save the object policy in the shadow
	capability.
	(storage_alloc_): Likewise.
	(storage_free_): Likewise.
